pioneers (0.9.61-1) unstable; urgency=low

  * Upstream svn snapshot release. (Closes: #359924, #331291)
  * Reset maintainer to myself.
  * Exclude all editor-related things instead of specific files.
  * Improved debian/copyright.

 -- Bas Wijnen <shevek@fmf.nl>  Sun,  9 Apr 2006 17:04:01 +0200

pioneers (0.9.55-1) unstable; urgency=high

  * Upstream CVS snapshot release. (Closes: #351034)
  * Fix for meta-server remote crash possibility (Closes: #351986)

 -- Bas Wijnen <shevek@fmf.nl>  Wed,  9 Feb 2006 11:19:00 +0100

pioneers (0.9.49-1) unstable; urgency=high

  * Moved maintainance address to Debian games team.
  * New upstream url in copyright file. (Closes: #346472)
  * New location for desktop files.
  * Extra icons and descriptions for menus.
  * Close denial of service hole. (Closes: #350237)
  * Upstream CVS snapshot release. (Closes: #347214)

 -- Bas Wijnen <shevek@fmf.nl>  Sat, 28 Jan 2006  7:08:45 +0100

pioneers (0.9.33-1) unstable; urgency=low

  * Upstream CVS snapshot release. (Closes: #328880, #289048, #327165)

 -- Bas Wijnen <shevek@fmf.nl>  Thu,  2 Oct 2005 22:12:10 +0200

pioneers (0.9.23-1) unstable; urgency=low

  * Snapshot from upstream CVS. (Closes: #322704, #322737)

 -- Bas Wijnen <shevek@fmf.nl>  Thu, 18 Aug 2005 00:02:32 +0200

pioneers (0.9.19-2) unstable; urgency=low

  * Made short descriptions more descriptive (Closes: #320870)
  * Updated some Depends: and Recommends:.

 -- Bas Wijnen <shevek@fmf.nl>  Fri,  5 Aug 2005 00:32:12 +0200

pioneers (0.9.19-1) unstable; urgency=low

  * Snapshot from upstream CVS.

 -- Bas Wijnen <shevek@fmf.nl>  Fri, 15 Jul 2005 11:30:02 +0200

pioneers (0.9.17-2) unstable; urgency=low

  * Upstream rename due to trademark concerns.

 -- Steve Langasek <vorlon@debian.org>  Sat, 25 Jun 2005 05:28:02 -0700

gnocatan (0.9.17-1) unstable; urgency=low

  * New maintainer, adjust the package a bit to my liking.

 -- Bas Wijnen <shevek@fmf.nl>  Thu, 16 Jun 2005 17:54:12 +0200
