@@ -4,8 +4,11 @@ pioneers (0.9.61-1) unstable; urgency=low
   * Reset maintainer to myself.
   * Exclude all editor-related things instead of specific files.
   * Improved debian/copyright.
+  * Allow cross-compiling.
+  * Add autoconf as a direct dependency.
+  * Force the use of automake-1.9.
 
- -- Bas Wijnen <shevek@fmf.nl>  Sun,  9 Apr 2006 17:04:01 +0200
+ -- Bas Wijnen <shevek@fmf.nl>  Sat, 15 Apr 2006 10:54:35 +0200
 
 pioneers (0.9.55-1) unstable; urgency=high
 
